[comment]:fontawesome comment is added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo App Using  JavaScript</title>
     <link rel="stylesheet" href="todo.css">
+    <!-- fontawesom link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+        <!-- end of fontawesom link -->
 </head>
 <body>
   <div class="wrapper">
